objects/CM_Policy_Exception_Collateral_Mapping__mdt.object
<CustomObject>
    <description>This matrix is used to auto-populate the &quot;Policy&quot; field on the Policy Exception records</description>
    <fields>
        <fullName>CF_Collateral_Code__c</fullName>
        <label>Collateral Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_PE_Name__c</fullName>
        <label>PE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_PE_Type__c</fullName>
        <label>PE Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Statutory_LTV_Limit__c</fullName>
        <label>Statutory LTV Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Policy__c</fullName>
        <label>Default Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Policy Exception - Policy Mapping</label>
    <pluralLabel>Policy Exception - Policy Mappings</pluralLabel>
</CustomObject>